<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <PreferenceCategory>

        <ListPreference
            android:defaultValue="@string/prefDefault_recordType"
            android:dialogTitle="@string/prefDialogTitle_recordType"
            android:entries="@array/prefEntries_recordType"
            android:entryValues="@array/prefValues_recordType"
            android:key="pref_key_record_type"
            android:title="@string/pref_title_record_type" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_enable_high_quality"
            android:summary="@string/pref_summary_enable_high_quality"
            android:title="@string/pref_title_enable_high_quality" />
    </PreferenceCategory>

    <PreferenceCategory>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_enable_sound_effect"
            android:summary="@string/pref_summary_enable_sound_effect"
            android:title="@string/pref_title_enable_sound_effect" />
    </PreferenceCategory>
</PreferenceScreen>
